src/features/presentation/pages/presentation/presentation.page.scss
@import '../../../../scss/mixins/mixins';
@import '../../../../scss/functions/functions';
@import '../../../../scss/variables/variables';

.bg-welcome {
  background-image: url('/assets/img/presentation/fond-landing.svg');
  background-repeat: no-repeat;
  background-size: cover;
}

.bg-info {
  background-color: #e3e3fd !important;
}

.bg-integration {
  background-color: #f6f6f6 !important;
}

.card-badge-title {
  background-color: #fee7fc !important;
  color: #6e445a !important;
  font-size: 10px;
}

.bg-carto-nationale-cnfs {
  background-color: #000091 !important;
}

.bg-numi {
  background-color: #6ebc9f !important;
}

.bg-mednum-antilles {
  background-color: #007fa8 !important;
}

.bg-orientation {
  background: radial-gradient(50.92% 181.15% at 4.11% 12.58%, #0063cb 0%, #000091 100%);
}

.bg-visibilite {
  background: radial-gradient(50.92% 181.15% at 4.11% 12.58%, #ffca00 0%, #c3732a 100%);
}

.bg-centralisation {
  background: radial-gradient(50.92% 181.15% at 4.11% 12.58%, #1dd884 0%, #297254 100%);
}

.bg-actualisation {
  background: radial-gradient(50.92% 181.15% at 4.11% 12.58%, #e1000f 0%, #533232 100%);
}

.bg-personnalisation {
  background: #53918c;
}

.btn-discover {
  color: $primary;
  background-color: #8585f6;

  &:hover {
    background-color: #8585f6;
  }

  &:focus {
    box-shadow: $focus-box-shadow;
  }
}

